--- a/Amugram/requirements.txt
+++ b/Amugram/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 Django==5.1.5
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.4.0
+pillow==11.1.0
 psycopg2==2.9.10
 psycopg2-binary==2.9.10
 PyJWT==2.10.1
